--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "firebase": "^6.0.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
+    "react-chat-elements": "^10.5.0",
     "react-dom": "^16.8.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
